<resources>
    <string name="app_name">DialogDemo</string>
    <string name="click_me_text">点我</string>
    <string name="time_text">"00:00"</string>

    <!--1,4,7,*-->
    <string name="float_window_dialpad_key_1">"1"</string>
    <string name="float_window_dialpad_key_4">"4"</string>
    <string name="float_window_dialpad_key_7">"7"</string>
    <string name="float_window_dialpad_key_asterisk">"*"</string>
    <!--2,5,8,0+-->
    <string name="float_window_dialpad_key_2">"2"</string>
    <string name="float_window_dialpad_key_5">"5"</string>
    <string name="float_window_dialpad_key_8">"8"</string>
    <string name="float_window_dialpad_key_0">"0+"</string>
    <!--3,6,9,#-->
    <string name="float_window_dialpad_key_3">"3"</string>
    <string name="float_window_dialpad_key_6">"6"</string>
    <string name="float_window_dialpad_key_9">"9"</string>
    <string name="float_window_dialpad_key_pound_sign">"#"</string>

    <string name="float_window_call_state_unknown_text">未知</string>
    <string name="float_window_call_state_dialing_text">拨号中...</string>
    <string name="float_window_call_state_active_text">通话中...</string>
    <string name="float_window_call_state_incoming_text">来电中...</string>

</resources>
